[gd_scene load_steps=16 format=2]

[ext_resource path="res://src/scenes/recipes/page_recipe_edit/page_recipe_edit.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/item_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/ui/ui_scroll.gd" type="Script" id=6]
[ext_resource path="res://assets/fonts/box_row_title_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/fonts/large_title.tres" type="DynamicFont" id=8]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0, 0, 0.478431 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
expand_margin_left = 8.0
expand_margin_right = 8.0
expand_margin_top = 8.0
expand_margin_bottom = 8.0

[sub_resource type="StyleBoxEmpty" id=14]

[sub_resource type="StyleBoxFlat" id=17]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 1, 1, 1, 1 )
expand_margin_left = 4.0
expand_margin_right = 4.0
expand_margin_top = 4.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.690196, 0.266667, 0.156863, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.137255, 0.490196, 0.741176, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0745098, 0.254902, 0.384314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.117647, 0.427451, 0.647059, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="PageRecipeEdit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -147.0
rect_min_size = Vector2( 576, 0 )
follow_focus = true
scroll_horizontal_enabled = false
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="MarginContainer" parent="Scroll"]
margin_right = 550.0
margin_bottom = 1186.0
rect_min_size = Vector2( 550, 0 )
mouse_filter = 2
custom_constants/margin_right = 16
custom_constants/margin_left = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vertical" type="VBoxContainer" parent="Scroll/Container"]
margin_left = 32.0
margin_right = 534.0
margin_bottom = 1186.0
mouse_filter = 2
custom_constants/separation = 32

[node name="Space" type="Control" parent="Scroll/Container/Vertical"]
margin_right = 502.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 150 )
mouse_filter = 1

[node name="Name" type="PanelContainer" parent="Scroll/Container/Vertical"]
margin_top = 182.0
margin_right = 502.0
margin_bottom = 272.0
mouse_filter = 1
custom_styles/panel = SubResource( 13 )

[node name="Horizontal" type="VBoxContainer" parent="Scroll/Container/Vertical/Name"]
margin_right = 502.0
margin_bottom = 90.0
custom_constants/separation = 6

[node name="Title" type="Label" parent="Scroll/Container/Vertical/Name/Horizontal"]
margin_right = 502.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 7 )
text = "Title"
autowrap = true

[node name="Text" type="LineEdit" parent="Scroll/Container/Vertical/Name/Horizontal"]
margin_top = 44.0
margin_right = 502.0
margin_bottom = 90.0
rect_min_size = Vector2( 300, 0 )
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 16 )

[node name="Description" type="PanelContainer" parent="Scroll/Container/Vertical"]
margin_top = 304.0
margin_right = 502.0
margin_bottom = 494.0
mouse_filter = 1
custom_styles/panel = SubResource( 14 )

[node name="Vertical" type="VBoxContainer" parent="Scroll/Container/Vertical/Description"]
margin_right = 502.0
margin_bottom = 190.0

[node name="Header" type="HBoxContainer" parent="Scroll/Container/Vertical/Description/Vertical"]
margin_right = 502.0
margin_bottom = 46.0
custom_constants/separation = 16

[node name="Title" type="Label" parent="Scroll/Container/Vertical/Description/Vertical/Header"]
margin_top = 4.0
margin_right = 164.0
margin_bottom = 42.0
custom_fonts/font = ExtResource( 5 )
text = "Description"

[node name="ClearDescription" type="Button" parent="Scroll/Container/Vertical/Description/Vertical/Header"]
margin_left = 180.0
margin_right = 263.0
margin_bottom = 46.0
custom_fonts/font = ExtResource( 5 )
custom_styles/normal = SubResource( 17 )
text = "Clear"

[node name="Text" type="TextEdit" parent="Scroll/Container/Vertical/Description/Vertical"]
margin_top = 50.0
margin_right = 502.0
margin_bottom = 190.0
rect_min_size = Vector2( 0, 140 )
custom_fonts/font = ExtResource( 5 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 8 )
text = "Text is unused.
"
selecting_enabled = false
wrap_enabled = true

[node name="Ingredients" type="PanelContainer" parent="Scroll/Container/Vertical"]
margin_top = 526.0
margin_right = 502.0
margin_bottom = 614.0
mouse_filter = 1
custom_styles/panel = SubResource( 14 )

[node name="Vertical" type="VBoxContainer" parent="Scroll/Container/Vertical/Ingredients"]
margin_right = 502.0
margin_bottom = 88.0

[node name="Header" type="HBoxContainer" parent="Scroll/Container/Vertical/Ingredients/Vertical"]
margin_right = 502.0
margin_bottom = 84.0

[node name="Title" type="Label" parent="Scroll/Container/Vertical/Ingredients/Vertical/Header"]
margin_top = 23.0
margin_right = 256.0
margin_bottom = 61.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Ingredients"

[node name="AddIngredient" type="Button" parent="Scroll/Container/Vertical/Ingredients/Vertical/Header"]
margin_left = 260.0
margin_right = 344.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 17 )
text = " + "

[node name="RemoveIngredient" type="Button" parent="Scroll/Container/Vertical/Ingredients/Vertical/Header"]
margin_left = 348.0
margin_right = 432.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 17 )
text = " - "

[node name="List" type="VBoxContainer" parent="Scroll/Container/Vertical/Ingredients/Vertical"]
margin_top = 88.0
margin_right = 502.0
margin_bottom = 88.0

[node name="Tags" type="PanelContainer" parent="Scroll/Container/Vertical"]
margin_top = 646.0
margin_right = 502.0
margin_bottom = 734.0
mouse_filter = 2
custom_styles/panel = SubResource( 15 )

[node name="Vertical" type="VBoxContainer" parent="Scroll/Container/Vertical/Tags"]
margin_right = 502.0
margin_bottom = 88.0

[node name="Header" type="HBoxContainer" parent="Scroll/Container/Vertical/Tags/Vertical"]
margin_right = 502.0
margin_bottom = 84.0

[node name="Title" type="Label" parent="Scroll/Container/Vertical/Tags/Vertical/Header"]
margin_top = 23.0
margin_right = 256.0
margin_bottom = 61.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Tags"

[node name="AddTag" type="Button" parent="Scroll/Container/Vertical/Tags/Vertical/Header"]
margin_left = 260.0
margin_right = 344.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 17 )
text = " + "

[node name="RemoveTag" type="Button" parent="Scroll/Container/Vertical/Tags/Vertical/Header"]
margin_left = 348.0
margin_right = 432.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 17 )
text = " - "

[node name="Horizontal" type="HBoxContainer" parent="Scroll/Container/Vertical/Tags/Vertical"]
margin_top = 88.0
margin_right = 502.0
margin_bottom = 88.0

[node name="Instructions" type="PanelContainer" parent="Scroll/Container/Vertical"]
margin_top = 766.0
margin_right = 502.0
margin_bottom = 854.0
mouse_filter = 2
custom_styles/panel = SubResource( 15 )

[node name="Vertical" type="VBoxContainer" parent="Scroll/Container/Vertical/Instructions"]
margin_right = 502.0
margin_bottom = 88.0

[node name="Horizontal" type="HBoxContainer" parent="Scroll/Container/Vertical/Instructions/Vertical"]
margin_right = 502.0
margin_bottom = 84.0
custom_constants/separation = 10

[node name="Title" type="Label" parent="Scroll/Container/Vertical/Instructions/Vertical/Horizontal"]
margin_top = 23.0
margin_right = 256.0
margin_bottom = 61.0
rect_min_size = Vector2( 256, 0 )
custom_fonts/font = ExtResource( 5 )
text = "Instructions"

[node name="AddInstruction" type="Button" parent="Scroll/Container/Vertical/Instructions/Vertical/Horizontal"]
margin_left = 266.0
margin_right = 350.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 17 )
text = " + "

[node name="RemoveInstruction" type="Button" parent="Scroll/Container/Vertical/Instructions/Vertical/Horizontal"]
margin_left = 360.0
margin_right = 444.0
margin_bottom = 84.0
rect_min_size = Vector2( 84, 84 )
custom_fonts/font = ExtResource( 8 )
custom_styles/normal = SubResource( 17 )
text = " - "

[node name="List" type="VBoxContainer" parent="Scroll/Container/Vertical/Instructions/Vertical"]
margin_top = 88.0
margin_right = 502.0
margin_bottom = 88.0
custom_constants/separation = 16

[node name="Space2" type="Control" parent="Scroll/Container/Vertical"]
margin_top = 886.0
margin_right = 502.0
margin_bottom = 1186.0
rect_min_size = Vector2( 0, 300 )
mouse_filter = 2

[node name="Tween" type="Tween" parent="Scroll"]

[node name="DontSave" type="Button" parent="."]
margin_left = 406.0
margin_top = 21.0
margin_right = 561.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 12 )
text = "Don't Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="."]
margin_left = 16.0
margin_top = 21.0
margin_right = 124.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 5 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 10 )
custom_styles/focus = SubResource( 9 )
custom_styles/normal = SubResource( 9 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="gui_input" from="Scroll" to="Scroll" method="_on_Scroll_gui_input"]
[connection signal="pressed" from="Scroll/Container/Vertical/Description/Vertical/Header/ClearDescription" to="." method="_on_ClearDescription_pressed"]
[connection signal="pressed" from="Scroll/Container/Vertical/Ingredients/Vertical/Header/AddIngredient" to="." method="_on_AddIngredient_pressed"]
[connection signal="pressed" from="Scroll/Container/Vertical/Ingredients/Vertical/Header/RemoveIngredient" to="." method="_on_RemoveIngredient_pressed"]
[connection signal="pressed" from="Scroll/Container/Vertical/Tags/Vertical/Header/AddTag" to="." method="_on_AddTag_pressed"]
[connection signal="pressed" from="Scroll/Container/Vertical/Tags/Vertical/Header/RemoveTag" to="." method="_on_RemoveTag_pressed"]
[connection signal="pressed" from="Scroll/Container/Vertical/Instructions/Vertical/Horizontal/AddInstruction" to="." method="_on_AddInstruction_pressed"]
[connection signal="pressed" from="Scroll/Container/Vertical/Instructions/Vertical/Horizontal/RemoveInstruction" to="." method="_on_RemoveInstruction_pressed"]
[connection signal="pressed" from="DontSave" to="." method="_on_DontSave_pressed"]
[connection signal="pressed" from="Save" to="." method="_on_Save_pressed"]
