[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/fonts/font18.tres" type="DynamicFont" id=1]
[ext_resource path="res://src/prefabs/Searchbar.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/recipes/page_recipe_edit/page_recipe_edit.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/font48.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/item_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://src/prefabs/TextBox.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/scenes/recipes/page_recipe_edit/PageRecipeEditIngredient.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/scenes/recipes/page_recipe_edit/PageRecipeEditDirection.tscn" type="PackedScene" id=8]
[ext_resource path="res://src/ui/ui_scroll.gd" type="Script" id=9]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="RecipeEdit" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="First" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Searchbar" parent="First" instance=ExtResource( 2 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -390.0
margin_top = -288.0
margin_right = 390.0
margin_bottom = -160.0

[node name="Header" parent="First/Searchbar/Vertical" index="0"]
margin_right = 780.0

[node name="Tip" parent="First/Searchbar/Vertical/Header" index="0"]
text = "Name of Recipe.."

[node name="User" type="RichTextLabel" parent="First"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -191.0
margin_top = -157.0
margin_right = 191.0
margin_bottom = -85.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Created by [b]David[/b]"
text = "Created by David"
fit_content_height = true

[node name="Description" parent="First" instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -464.0
margin_top = 148.0
margin_right = 464.0
margin_bottom = 581.0

[node name="Label" type="Label" parent="First"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.5
margin_top = 75.0
margin_right = 114.5
margin_bottom = 127.0
custom_fonts/font = ExtResource( 1 )
text = "Description"

[node name="Second" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Scroll" type="ScrollContainer" parent="Second"]
anchor_right = 1.0
anchor_bottom = 1.0
follow_focus = true
script = ExtResource( 9 )

[node name="CenterContainer" type="CenterContainer" parent="Second/Scroll"]
margin_right = 1080.0
margin_bottom = 2188.0
rect_min_size = Vector2( 1080, 0 )
mouse_filter = 2

[node name="Vertical" type="VBoxContainer" parent="Second/Scroll/CenterContainer"]
margin_left = 1.0
margin_right = 1078.0
margin_bottom = 2188.0

[node name="Space" type="Control" parent="Second/Scroll/CenterContainer/Vertical"]
margin_right = 1077.0
margin_bottom = 400.0
rect_min_size = Vector2( 0, 400 )
mouse_filter = 2

[node name="Ingredients" type="PanelContainer" parent="Second/Scroll/CenterContainer/Vertical"]
margin_top = 404.0
margin_right = 1077.0
margin_bottom = 1296.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Vertical" type="VBoxContainer" parent="Second/Scroll/CenterContainer/Vertical/Ingredients"]
margin_right = 1077.0
margin_bottom = 892.0

[node name="Title" type="Label" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical"]
margin_right = 1077.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 4 )
text = "Ingredients"
align = 1

[node name="Center" type="CenterContainer" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical"]
margin_top = 122.0
margin_right = 1077.0
margin_bottom = 892.0

[node name="List" type="VBoxContainer" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center"]
margin_left = 39.0
margin_right = 1037.0
margin_bottom = 770.0

[node name="PageRecipeEditIngredient" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]

[node name="PageRecipeEditIngredient2" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]
margin_top = 86.0
margin_bottom = 168.0

[node name="PageRecipeEditIngredient3" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]
margin_top = 172.0
margin_bottom = 254.0

[node name="PageRecipeEditIngredient4" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]
margin_top = 258.0
margin_bottom = 340.0

[node name="PageRecipeEditIngredient5" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]
margin_top = 344.0
margin_bottom = 426.0

[node name="PageRecipeEditIngredient6" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]
margin_top = 430.0
margin_bottom = 512.0

[node name="PageRecipeEditIngredient7" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]
margin_top = 516.0
margin_bottom = 598.0

[node name="PageRecipeEditIngredient8" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]
margin_top = 602.0
margin_bottom = 684.0

[node name="PageRecipeEditIngredient9" parent="Second/Scroll/CenterContainer/Vertical/Ingredients/Vertical/Center/List" instance=ExtResource( 7 )]
margin_top = 688.0
margin_bottom = 770.0

[node name="Directions" type="PanelContainer" parent="Second/Scroll/CenterContainer/Vertical"]
margin_top = 1300.0
margin_right = 1077.0
margin_bottom = 1784.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Vertical" type="VBoxContainer" parent="Second/Scroll/CenterContainer/Vertical/Directions"]
margin_right = 1077.0
margin_bottom = 484.0

[node name="Title" type="Label" parent="Second/Scroll/CenterContainer/Vertical/Directions/Vertical"]
margin_right = 1077.0
margin_bottom = 118.0
custom_fonts/font = ExtResource( 4 )
text = "Directions"
align = 1

[node name="List" type="VBoxContainer" parent="Second/Scroll/CenterContainer/Vertical/Directions/Vertical"]
margin_top = 122.0
margin_right = 1077.0
margin_bottom = 484.0

[node name="PageRecipeEditDirection" parent="Second/Scroll/CenterContainer/Vertical/Directions/Vertical/List" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1077.0
margin_bottom = 118.0

[node name="PageRecipeEditDirection2" parent="Second/Scroll/CenterContainer/Vertical/Directions/Vertical/List" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 122.0
margin_right = 1077.0
margin_bottom = 240.0

[node name="PageRecipeEditDirection3" parent="Second/Scroll/CenterContainer/Vertical/Directions/Vertical/List" instance=ExtResource( 8 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 244.0
margin_right = 1077.0
margin_bottom = 362.0

[node name="Space2" type="Control" parent="Second/Scroll/CenterContainer/Vertical"]
margin_top = 1788.0
margin_right = 1077.0
margin_bottom = 2188.0
rect_min_size = Vector2( 0, 400 )
mouse_filter = 2

[node name="Menu" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -376.5
margin_top = -328.0
margin_right = 376.5
margin_bottom = -173.0
custom_constants/separation = 64
alignment = 1

[node name="1" type="Button" parent="Menu"]
margin_left = 80.0
margin_right = 235.0
margin_bottom = 155.0
rect_min_size = Vector2( 155, 155 )
custom_fonts/font = ExtResource( 4 )
text = "1"

[node name="2" type="Button" parent="Menu"]
margin_left = 299.0
margin_right = 454.0
margin_bottom = 155.0
rect_min_size = Vector2( 155, 155 )
custom_fonts/font = ExtResource( 4 )
text = "2"

[node name="3" type="Button" parent="Menu"]
margin_left = 518.0
margin_right = 673.0
margin_bottom = 155.0
rect_min_size = Vector2( 155, 155 )
custom_fonts/font = ExtResource( 4 )
text = "3"

[editable path="First/Searchbar"]
